--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
     </div>
   </div>
   <script type="module" src="js/custom.js"></script>
+  <!-- LIVE -->
+  <!-- <script src="https://www.paypal.com/sdk/js?client-id=AasaWyjWpoUbUjKQvBV_L8iITQocAXdLIeHSS_w_PVipWMxd2QtjY0NCoV0N8dyX3SzC59rfnl-XnROs&currency=EUR&disable-funding=card,credit"></script> -->
+  <!-- TEST -->
   <script src="https://www.paypal.com/sdk/js?client-id=Ac89T-HRn6G10rPZUc1HCRGTk-TCFVF71obq_2mT09uKlEvljxv_Y5i2eZic90tHukpBejVXP5hQMYeY&currency=EUR&disable-funding=card,credit"></script>
+
 </body>
 
 </html>
