--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <button class="dos-button menu-btn" id="green-button">GREEN CAMPING</button>
         <button class="dos-button menu-btn" id="tickets-button">TICKETS</button>
         <button class="dos-button menu-btn deactivated" id="lineup-button">LINE-UP</button>
-        <button class="dos-button menu-btn deactivated" id="faq-button">FAQ</button>
+        <button class="dos-button menu-btn" id="faq-button">FAQ</button>
         <button class="dos-button menu-btn deactivated" id="archiv-button">ARCHIV</button>
         <button class="dos-button menu-btn" id="impressum-button">IMPRESSUM</button>
 
