datenschutz, agb menu btns added

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <div class="menu-window hidden" id="menu-window">
                     <button class="dos-button menu-btn" id="bewirb-button">
-                        BEWIRB DICH
+                        BEWIRB DICH ALS ACT / STAND
                     </button>
                     <button class="dos-button menu-btn" id="helfer-button">
                         WERDE HELFER*IN
@@ -110,6 +110,12 @@
                         id="archiv-button"
                     >
                         ARCHIV
+                    </button>
+                    <button class="dos-button menu-btn" id="datenschutz-button">
+                        DATENSCHUTZ
+                    </button>
+                    <button class="dos-button menu-btn" id="agb-button">
+                        AGB
                     </button>
                     <button class="dos-button menu-btn" id="impressum-button">
                         IMPRESSUM
