manual sendmail hack

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
         <button class="dos-button menu-btn" id="impressum-button">
           IMPRESSUM
         </button>
+        <button class="dos-button menu-btn" id="admin-button" style="display:none">
+          ADMIN
+        </button>
       </div>
 
       <div class="content-window hidden" id="content-window"></div>
@@ -107,10 +110,10 @@
   </div>
   <script type="module" src="js/custom.js"></script>
   <!-- LIVE -->
-  <!-- <script src="https://www.paypal.com/sdk/js?client-id=AasaWyjWpoUbUjKQvBV_L8iITQocAXdLIeHSS_w_PVipWMxd2QtjY0NCoV0N8dyX3SzC59rfnl-XnROs&currency=EUR&disable-funding=card,credit"></script> -->
+  <script src="https://www.paypal.com/sdk/js?client-id=AasaWyjWpoUbUjKQvBV_L8iITQocAXdLIeHSS_w_PVipWMxd2QtjY0NCoV0N8dyX3SzC59rfnl-XnROs&currency=EUR&disable-funding=card,credit"></script>
   <!-- TEST -->
-  <script
-    src="https://www.paypal.com/sdk/js?client-id=Ac89T-HRn6G10rPZUc1HCRGTk-TCFVF71obq_2mT09uKlEvljxv_Y5i2eZic90tHukpBejVXP5hQMYeY&currency=EUR&disable-funding=card,credit"></script>
+  <!-- <script
+    src="https://www.paypal.com/sdk/js?client-id=Ac89T-HRn6G10rPZUc1HCRGTk-TCFVF71obq_2mT09uKlEvljxv_Y5i2eZic90tHukpBejVXP5hQMYeY&currency=EUR&disable-funding=card,credit"></script> -->
 
 
     
