--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
         <button class="dos-button menu-btn" id="admin-button" style="display:none">
           ADMIN
         </button>
+        <button class="dos-button menu-btn" id="console-button">
+          CONSOLE
+        </button>
       </div>
 
       <div class="content-window hidden" id="content-window"></div>
