overlay weg, da ios bug und maybebaby epilepsietot

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="hue-overlay" id="hue-overlay"></div>
+  <div class="hue-overlay" id="hue-overlay" style="display:none"></div>
   <div class="grain-overlay"></div>
   <div class="fullscreen-image-wrapper">
     <div class="fullscreen-image">
