first implement feedback/video upload, menu font size small adjusts on small displays

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
                 </div>
 
                 <div class="menu-window hidden" id="menu-window">
+                    <button class="dos-button menu-btn" id="meinung-button">
+                        DEINE MEINUNG
+                    </button>
                     <button class="dos-button menu-btn" id="bewirb-button">
                         BEWIRB DICH ALS ACT / STAND
                     </button>
