--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="menu-window hidden" id="menu-window">
-                    <button class="dos-button menu-btn" id="meinung-button">
+                    <button class="dos-button menu-btn" id="meinung-button" style="display:none">
                         DEINE MEINUNG
                     </button>
                     <button class="dos-button menu-btn" id="bewirb-button">
@@ -103,6 +103,9 @@
                     </button>
                     <button class="dos-button menu-btn" id="green-button">
                         GREEN CAMPING
+                    </button>
+                    <button class="dos-button menu-btn" id="awareness-button">
+                        AWARENESS
                     </button>
                     <button class="dos-button menu-btn" id="tickets-button">
                         TICKETS
