shop tickets update, lineup date building update

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="content-window hidden" id="content-window"></div>
 
                 <div class="alert hidden" id="alert-window">
-                    <p id="alert-content"></p>
+                    <div id="alert-content" class="alert-content"></div>
                     <center>
                         <button
                             class="dos-button menu-btn"
