--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <button class="dos-button menu-btn" id="meinung-button" style="display:none">
                         DEINE MEINUNG
                     </button>
-                    <button class="dos-button menu-btn" id="bewirb-button">
+                    <button class="dos-button menu-btn" id="bewirb-button" style="display:none">
                         BEWIRB DICH ALS ACT / STAND
                     </button>
                     <button class="dos-button menu-btn" id="helfer-button">
@@ -112,6 +112,9 @@
                     </button>
                     <button class="dos-button menu-btn" id="lineup-button">
                         ARTISTS & LINE-UP
+                    </button>
+                    <button class="dos-button menu-btn" id="anreise-button">
+                        GRÜNE ANREISE
                     </button>
                     <button class="dos-button menu-btn" id="faq-button">
                         FAQ
