--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
             </div>
 
             <div class="cart-bar">
-                <button class="dos-button" id="cart-btn">TICKETS</button>
+                <button class="dos-button deactivated" id="cart-btn" disabled style="display:none">TICKETS</button>
+                <button class="dos-button" id="info-2025-btn">INFO</button>
+                <button class="dos-button" id="shirt-contest-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16"
+                        style="vertical-align: middle; margin-right: 4px;">
+                        <path d="M5 20h14v-2H5v2z M12 6l5 5h-3v4h-4v-4h-3l5-5z" fill="currentColor" />
+                    </svg>
+                    SHIRT CONTEST
+                </button>
                 <button class="dos-button" id="pay-btn">
                     ZUR KASSE
                 </button>
@@ -78,22 +86,25 @@
                 <button class="dos-button menu-btn" id="festival-button">
                     DAS FESTIVAL
                 </button>
-                <button class="dos-button menu-btn" id="green-button">
+                <button class="dos-button menu-btn deactivated" id="green-button" disabled  style="display: none">
                     GREEN CAMPING
                 </button>
                 <button class="dos-button menu-btn" id="awareness-button">
                     AWARENESS
                 </button>
-                <button class="dos-button menu-btn deactivated" id="tickets-button" disabled>
+                <button class="dos-button menu-btn deactivated" id="tickets-button" disabled  style="display: none">
                     TICKETS
                 </button>
-                <button class="dos-button menu-btn" id="lineup-button">
+                <button class="dos-button menu-btn" id="lineup2024-button">
                     ARTISTS 2024
                 </button>
-                <button class="dos-button menu-btn" id="anreise-button">
+                <button class="dos-button menu-btn" id="lineup2025-button">
+                    ARTISTS 2025
+                </button>
+                <button class="dos-button menu-btn deactivated" id="anreise-button" disabled>
                     GRÜNE ANREISE
                 </button>
-                <button class="dos-button menu-btn hidden" id="faq-button" disabled>
+                <button class="dos-button menu-btn hidden" id="faq-button" disabled  style="display: none">
                     FAQ
                 </button>
                 <button class="dos-button menu-btn" id="archiv-button">
@@ -102,7 +113,7 @@
                 <button class="dos-button menu-btn" id="datenschutz-button">
                     DATENSCHUTZ
                 </button>
-                <button class="dos-button menu-btn" id="agb-button">
+                <button class="dos-button menu-btn deactivated" id="agb-button" disabled  style="display: none">
                     AGB
                 </button>
                 <button class="dos-button menu-btn" id="impressum-button">
@@ -142,7 +153,7 @@
         src="https://www.paypal.com/sdk/js?client-id=AasaWyjWpoUbUjKQvBV_L8iITQocAXdLIeHSS_w_PVipWMxd2QtjY0NCoV0N8dyX3SzC59rfnl-XnROs&currency=EUR&disable-funding=card,credit"></script> -->
     <!-- TEST -->
     <script
-    src="https://www.paypal.com/sdk/js?client-id=Ac89T-HRn6G10rPZUc1HCRGTk-TCFVF71obq_2mT09uKlEvljxv_Y5i2eZic90tHukpBejVXP5hQMYeY&currency=EUR&disable-funding=card,credit"></script>
+        src="https://www.paypal.com/sdk/js?client-id=Ac89T-HRn6G10rPZUc1HCRGTk-TCFVF71obq_2mT09uKlEvljxv_Y5i2eZic90tHukpBejVXP5hQMYeY&currency=EUR&disable-funding=card,credit"></script>
 </body>
 
 </html>
